Fix Java 8 compatibility in command tab completion